<?xml version="1.0"?>
<package>
  <name>grizzly_gazebo</name>
  <version>0.2.0</version>
  <description>Example launchfiles for working with the Grizzly simulator.</description>
  <maintainer email="yanma@clearpathrobotics.com">Yan Ma</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>grizzly_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>grizzly_description</run_depend>
  <run_depend>grizzly_motion</run_depend>
  <run_depend>grizzly_navigation</run_depend>
  <run_depend>grizzly_gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
