<?xml version="1.0"?>
<package>
  <name>grizzly_gazebo</name>
  <version>0.3.1</version>
  <description>Clearpath Grizzly Simulator bringup</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>grizzly_control</run_depend>
  <run_depend>grizzly_description</run_depend>
  <run_depend>rostopic</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
