<?xml version="1.0"?>
<package>
  <name>grizzly_gazebo_plugins</name>
  <version>0.2.0</version>
  <description>Gazebo plugin to provide simulated Grizzly dynamics.</description>

  <maintainer email="yanma@clearpathrobotics.com">Yan Ma</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>grizzly_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>grizzly_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
