<?xml version="1.0"?>
<package>
  <name>grizzly_simulator</name>
  <version>0.3.1</version>
  <description>Metapackage allowing easy installation of Grizzly simulation components.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>grizzly_gazebo</run_depend>

  <export><metapackage/></export>
</package>
